--- a/app/web/departments/development/leave-requests.html
+++ b/app/web/departments/development/leave-requests.html
@@ -1000,16 +1000,35 @@
 
         // Navigation configuration for different roles
         const navigationConfig = {
-            employee: [
+            // IT Department Developer/Interns/Executives - Basic menu
+            intern: [
                 { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
                 { icon: '🕒', label: 'Attendance', href: '/app/it/attendance' },
                 { icon: '📁', label: 'Projects', href: '/app/it/projects' },
                 { icon: '📝', label: 'Daily Reports', href: '/app/it/daily-reports' },
                 { icon: '⭐', label: 'Performance', href: '/app/it/performance' },
                 { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests', active: true },
-                { icon: '👤', label: 'Profile', href: '/app/it/profile' },
-                // { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' }
+                { icon: '👤', label: 'Profile', href: '/app/it/profile' }
             ],
+            developer: [
+                { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
+                { icon: '🕒', label: 'Attendance', href: '/app/it/attendance' },
+                { icon: '📁', label: 'Projects', href: '/app/it/projects' },
+                { icon: '📝', label: 'Daily Reports', href: '/app/it/daily-reports' },
+                { icon: '⭐', label: 'Performance', href: '/app/it/performance' },
+                { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests', active: true },
+                { icon: '👤', label: 'Profile', href: '/app/it/profile' }
+            ],
+            executive: [
+                { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
+                { icon: '🕒', label: 'Attendance', href: '/app/it/attendance' },
+                { icon: '📁', label: 'Projects', href: '/app/it/projects' },
+                { icon: '📝', label: 'Daily Reports', href: '/app/it/daily-reports' },
+                { icon: '⭐', label: 'Performance', href: '/app/it/performance' },
+                { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests', active: true },
+                { icon: '👤', label: 'Profile', href: '/app/it/profile' }
+            ],
+            // IT Department Team Leader - No Team management access
             team_lead: [
                 { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
                 { icon: '🕒', label: 'Attendance', href: '/app/it/attendance' },
@@ -1017,22 +1036,38 @@
                 { icon: '📝', label: 'Daily Reports', href: '/app/it/daily-reports' },
                 { icon: '⭐', label: 'Performance', href: '/app/it/performance' },
                 { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests', active: true },
-                { icon: '👥', label: 'Team', href: '/app/it/team' },
-                { icon: '👤', label: 'Profile', href: '/app/it/profile' },
-                { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' }
+                { icon: '👤', label: 'Profile', href: '/app/it/profile' }
             ],
+            // IT Department Manager - Full access including Team management
             manager: [
+                { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
+                { icon: '🕒', label: 'Attendance', href: '/app/it/attendance' },
+                { icon: '📁', label: 'Projects', href: '/app/it/projects' },
+                { icon: '📝', label: 'Daily Reports', href: '/app/it/daily-reports' },
+                { icon: '👥', label: 'Team', href: '/app/it/team' },
+                { icon: '⭐', label: 'Performance', href: '/app/it/performance' },
+                { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests', active: true },
+                { icon: '👤', label: 'Profile', href: '/app/it/profile' }
+            ],
+            dev_manager: [
+                { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
+                { icon: '🕒', label: 'Attendance', href: '/app/it/attendance' },
+                { icon: '📁', label: 'Projects', href: '/app/it/projects' },
+                { icon: '📝', label: 'Daily Reports', href: '/app/it/daily-reports' },
+                { icon: '👥', label: 'Team', href: '/app/it/team' },
+                { icon: '⭐', label: 'Performance', href: '/app/it/performance' },
+                { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests', active: true },
+                { icon: '👤', label: 'Profile', href: '/app/it/profile' }
+            ],
+            // Fallback for backward compatibility
+            employee: [
                 { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
                 { icon: '🕒', label: 'Attendance', href: '/app/it/attendance' },
                 { icon: '📁', label: 'Projects', href: '/app/it/projects' },
                 { icon: '📝', label: 'Daily Reports', href: '/app/it/daily-reports' },
                 { icon: '⭐', label: 'Performance', href: '/app/it/performance' },
                 { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests', active: true },
-                { icon: '👥', label: 'Team', href: '/app/it/team' },
-                { icon: '👤', label: 'Profile', href: '/app/it/profile' },
-                { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' },
-                { icon: '📈', label: 'Reports', href: '/app/it/reports' },
-                { icon: '⚙️', label: 'Settings', href: '/app/it/settings' }
+                { icon: '👤', label: 'Profile', href: '/app/it/profile' }
             ]
         };
 
