--- a/app/web/teams.html
+++ b/app/web/teams.html
@@ -870,7 +870,7 @@
                 <div class="user-info">
                     <div class="user-info-avatar" id="sidebar-user-avatar">S</div>
                     <div class="user-info-details">
-                        <div id="sidebar-username" style="font-weight: 500;">soheru</div>
+                        <div id="sidebar-username" style="font-weight: 500;">User</div>
                         <div id="sidebar-position" style="color: var(--text-secondary); font-size: 0.875rem;">Team</div>
                     </div>
                 </div>
@@ -898,9 +898,7 @@
                         <a href="/static/profile.html" class="dropdown-item">
                             <i>👤</i> Your Profile
                         </a>
-                        <a href="/static/settings.html" class="dropdown-item">
-                            <i>⚙️</i> Settings
-                        </a>
+                        
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item" id="logoutBtn">
                             <i>🚪</i> Log Out
