--- a/app/web/departments/development/profile.html
+++ b/app/web/departments/development/profile.html
@@ -733,9 +733,10 @@
                         <div id="userTimeDisplay" class="user-time"></div>
                     </div>
                     <div class="user-dropdown" id="userDropdown">
-                        <a href="/app/profile" class="dropdown-item">
+                        <a href="/app/it/profile" class="dropdown-item">
                             <i>👤</i> Your Profile
                         </a>
+                        
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item" id="logoutBtn">
                             <i>🚪</i> Log Out
