--- a/app/web/departments/development/performance-reviews.html
+++ b/app/web/departments/development/performance-reviews.html
@@ -1123,12 +1123,13 @@
                 { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests' },
                 { icon: '👤', label: 'Profile', href: '/app/it/profile' }
             ],
-            // IT Department Team Leader - No Team management access
+            // IT Department Team Leader - With Team management access
             team_lead: [
                 { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
                 { icon: '🕒', label: 'Attendance', href: '/app/it/attendance' },
                 { icon: '📁', label: 'Projects', href: '/app/it/projects' },
                 { icon: '📝', label: 'Daily Reports', href: '/app/it/daily-reports' },
+                { icon: '👥', label: 'Team', href: '/app/it/team' },
                 { icon: '⭐', label: 'Performance', href: '/app/it/performance', active: true },
                 { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests' },
                 { icon: '👤', label: 'Profile', href: '/app/it/profile' }
