--- a/app/web/departments/sales/reports.html
+++ b/app/web/departments/sales/reports.html
@@ -687,14 +687,14 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a href="/app/sales/reports" class="nav-link">
+                        <a href="/app/sales/reports" class="nav-link active">
                             <i>🚨</i>
                             Reports
                         </a>
                     </li>
                     
                     <li class="nav-item">
-                        <a href="/app/sales/profile" class="nav-link active">
+                        <a href="/app/sales/profile" class="nav-link">
                             <i>👤</i>
                             Profile
                         </a>
